[gd_scene load_steps=27 format=3 uid="uid://dgxj1mll8ljoq"]

[ext_resource type="Theme" uid="uid://d1qd6ity2mdpl" path="res://creator/creator_ui.theme.tres" id="1_7vhxy"]
[ext_resource type="Script" path="res://scripts/ui/global_teams.gd" id="2_es7rk"]
[ext_resource type="Shader" path="res://ui/common/shaders/ui_blurr.gdshader" id="3_re8er"]
[ext_resource type="StyleBox" uid="uid://nen4cpg1225q" path="res://ui/common/panels/panel_basic_rounded.stylebox.tres" id="4_4jq63"]
[ext_resource type="PackedScene" uid="uid://d3nipcgjwg7j5" path="res://ui/common/components/window_close_button.tscn" id="5_ftkge"]
[ext_resource type="PackedScene" uid="uid://dqmxrquvyyu51" path="res://ui/common/components/window_header.tscn" id="6_8d4r6"]
[ext_resource type="FontFile" uid="uid://bpw8ywxvp8ctj" path="res://ui/common/fonts/montserrat/montserrat_regular.ttf" id="7_2f2df"]
[ext_resource type="Script" path="res://scripts/ui/table.gd" id="8_felwx"]
[ext_resource type="PackedScene" uid="uid://beseishculvpd" path="res://ui/common/components/additional_button_input_field.tscn" id="8_x7jtb"]
[ext_resource type="Texture2D" uid="uid://b073tnwc67ff1" path="res://creator/tools/build_bar/team_icon_white.svg" id="12_bvatn"]
[ext_resource type="Script" path="res://ui/teams/team_name_input.gd" id="13_o87gp"]
[ext_resource type="Texture2D" uid="uid://ba6cax1isnajf" path="res://art/ui/remove-icon-normal.png" id="13_u6bnb"]
[ext_resource type="Texture2D" uid="uid://ticyjcdklwjb" path="res://art/ui/remove-icon-active-hover.png" id="14_j3jdr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ef6lu"]
shader = ExtResource("3_re8er")
shader_parameter/blur = 3.0
shader_parameter/color = Color(0.40504, 0.436742, 0.470745, 1)
shader_parameter/strength = 0.4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yl7s1"]
bg_color = Color(0.0431373, 0.0627451, 0.129412, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqnda"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gdar7"]
bg_color = Color(0.0431373, 0.0627451, 0.129412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.145098, 0.419608, 0.984314, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Theme" id="Theme_54m5n"]
default_font = ExtResource("7_2f2df")
default_font_size = 21
Button/colors/font_color = Color(0.372549, 0.372549, 0.372549, 1)
Button/colors/font_focus_color = Color(0.521569, 0.521569, 0.521569, 1)
Button/colors/font_hover_color = Color(0.521569, 0.521569, 0.521569, 1)
Button/styles/disabled = SubResource("StyleBoxFlat_yl7s1")
Button/styles/focus = SubResource("StyleBoxFlat_yl7s1")
Button/styles/hover = SubResource("StyleBoxFlat_yl7s1")
Button/styles/normal = SubResource("StyleBoxFlat_yl7s1")
Button/styles/pressed = SubResource("StyleBoxFlat_qqnda")
LineEdit/constants/outline_size = 0
LineEdit/font_sizes/font_size = 21
LineEdit/styles/focus = SubResource("StyleBoxFlat_yl7s1")
LineEdit/styles/normal = SubResource("StyleBoxFlat_yl7s1")
LineEdit/styles/read_only = SubResource("StyleBoxFlat_yl7s1")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_gdar7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bro2"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.133333)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7cjn"]
content_margin_left = 5.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.133333)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1d6j3"]
content_margin_left = 5.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.133333)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8iu3"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.133333)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rdkbg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1c7y"]
bg_color = Color(1, 1, 1, 1)
corner_radius_bottom_left = 10
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7em27"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kaxxm"]
border_width_top = 1
border_color = Color(0.8, 0.8, 0.8, 0.207843)
border_blend = true

[node name="TeamsWindow" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1280.0
offset_top = -720.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_7vhxy")
script = ExtResource("2_es7rk")

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="Control" type="Panel" parent="."]
material = SubResource("ShaderMaterial_ef6lu")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34375
anchor_top = 0.291667
anchor_right = 0.65625
anchor_bottom = 0.708333
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_4jq63")
metadata/_edit_use_anchors_ = true

[node name="close_button" parent="Control" instance=ExtResource("5_ftkge")]
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="CloseButton" parent="Control/close_button/MarginContainer" index="0"]
custom_minimum_size = Vector2(16, 16)

[node name="body" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/body"]
layout_mode = 2

[node name="window_header" parent="Control/body/VBoxContainer" instance=ExtResource("6_8d4r6")]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TITLE" parent="Control/body/VBoxContainer/window_header" index="0"]
offset_top = 45.0

[node name="MarginContainer" parent="Control/body/VBoxContainer/window_header/TITLE" index="0"]
theme_override_constants/margin_top = 0

[node name="Label" parent="Control/body/VBoxContainer/window_header/TITLE/MarginContainer" index="0"]
text = "Teams"

[node name="add_team_button" type="MarginContainer" parent="Control/body/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_54m5n")
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/body/VBoxContainer/add_team_button"]
layout_mode = 2

[node name="AddTeamTextboxButton" parent="Control/body/VBoxContainer/add_team_button/HBoxContainer" instance=ExtResource("8_x7jtb")]
layout_mode = 2
size_flags_horizontal = 3
button_placeholder = "Add Team"

[node name="Button" parent="Control/body/VBoxContainer/add_team_button/HBoxContainer/AddTeamTextboxButton/Panel/HBoxContainer" index="0"]
focus_mode = 0

[node name="LineEdit" parent="Control/body/VBoxContainer/add_team_button/HBoxContainer/AddTeamTextboxButton/Panel/HBoxContainer" index="1"]
placeholder_text = "Add Team"

[node name="AddTeamButton" type="Button" parent="Control/body/VBoxContainer/add_team_button/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_7vhxy")
theme_override_font_sizes/font_size = 18
text = "Add"

[node name="table_container" type="HBoxContainer" parent="Control/body/VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("8_felwx")

[node name="MarginContainer" type="MarginContainer" parent="Control/body/VBoxContainer/table_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 50

[node name="Scrollbar" type="ScrollContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer"]
custom_minimum_size = Vector2(0, 260)
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="table_header" type="Control" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="title_name" type="Label" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table_header"]
layout_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_0bro2")
text = "NAME
"

[node name="title_blank" type="Label" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table_header"]
layout_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_0bro2")

[node name="title_color" type="Label" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table_header"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_b7cjn")
text = "COLOR"
horizontal_alignment = 1

[node name="title_action" type="Label" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table_header"]
layout_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_1d6j3")
text = "ACTION"

[node name="title_blank_2" type="Label" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table_header"]
layout_mode = 0
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_k8iu3")
text = "REMOVE"
vertical_alignment = 1

[node name="new_row" type="Control" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="icon" type="MarginContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row"]
layout_mode = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureButton" type="TextureButton" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row/icon"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("12_bvatn")
ignore_texture_size = true
stretch_mode = 5

[node name="name" type="MarginContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row"]
layout_mode = 0
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="team_name" type="LineEdit" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row/name"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_rdkbg")
text = "RED TEAM"
placeholder_text = "Team Name here"
max_length = 64
script = ExtResource("13_o87gp")

[node name="color" type="PanelContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row"]
clip_children = 1
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_y1c7y")

[node name="team_color" type="ColorPickerButton" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row/color"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxEmpty_7em27")
color = Color(1, 0, 0, 1)

[node name="join_team" type="MarginContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="join_team_button" type="Button" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row/join_team"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme_override_constants/h_separation = 8
theme_override_constants/icon_max_width = 20
theme_override_font_sizes/font_size = 18
text = "Join"

[node name="remove_team" type="MarginContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row"]
layout_mode = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="remove_row_button" type="TextureButton" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row/remove_team"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("14_j3jdr")
texture_pressed = ExtResource("13_u6bnb")
texture_hover = ExtResource("13_u6bnb")
ignore_texture_size = true
stretch_mode = 5

[node name="visual separator" type="HSeparator" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row"]
layout_mode = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_kaxxm")

[node name="visual separator2" type="HSeparator" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row"]
layout_mode = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_kaxxm")

[node name="visual separator3" type="HSeparator" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row"]
layout_mode = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_kaxxm")

[node name="visual separator4" type="HSeparator" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row"]
layout_mode = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_kaxxm")

[node name="visual separator5" type="HSeparator" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/new_row"]
layout_mode = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_kaxxm")

[node name="table" type="GridContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_7vhxy")
theme_override_constants/h_separation = 0
columns = 5

[node name="title_name" type="Label" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0bro2")
text = "NAME
"

[node name="title_blank" type="Label" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_0bro2")

[node name="title_color" type="Label" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_b7cjn")
text = "COLOR"
horizontal_alignment = 1

[node name="title_action" type="Label" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1d6j3")
text = "ACTION"

[node name="title_blank_2" type="Label" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_k8iu3")
text = "REMOVE"
vertical_alignment = 1

[node name="icon" type="MarginContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureButton" type="TextureButton" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table/icon"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("12_bvatn")
ignore_texture_size = true
stretch_mode = 5

[node name="name" type="MarginContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="team_name" type="LineEdit" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table/name"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_rdkbg")
text = "RED TEAM"
placeholder_text = "Team Name here"
max_length = 64
script = ExtResource("13_o87gp")

[node name="color" type="PanelContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
clip_children = 1
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_y1c7y")

[node name="team_color" type="ColorPickerButton" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table/color"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxEmpty_7em27")
color = Color(1, 0, 0, 1)

[node name="join_team" type="MarginContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="join_team_button" type="Button" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table/join_team"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme_override_constants/h_separation = 8
theme_override_constants/icon_max_width = 20
theme_override_font_sizes/font_size = 18
text = "Join"

[node name="remove_team" type="MarginContainer" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="remove_row_button" type="TextureButton" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table/remove_team"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("14_j3jdr")
texture_pressed = ExtResource("13_u6bnb")
texture_hover = ExtResource("13_u6bnb")
ignore_texture_size = true
stretch_mode = 5

[node name="visual separator" type="HSeparator" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_kaxxm")

[node name="visual separator2" type="HSeparator" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_kaxxm")

[node name="visual separator3" type="HSeparator" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_kaxxm")

[node name="visual separator4" type="HSeparator" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_kaxxm")

[node name="visual separator5" type="HSeparator" parent="Control/body/VBoxContainer/table_container/MarginContainer/Scrollbar/VBoxContainer/table"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_kaxxm")

[connection signal="pressed" from="Control/close_button/MarginContainer/CloseButton" to="." method="close_button_pressed"]

[editable path="Control/close_button"]
[editable path="Control/body/VBoxContainer/window_header"]
[editable path="Control/body/VBoxContainer/add_team_button/HBoxContainer/AddTeamTextboxButton"]
